letter spacing adjusted and close function fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -186,20 +186,20 @@ h3 {
 }
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    width: 100%; 
+    height: 100%; 
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
   
   /* Modal Content/Box */
   .modal-content {
+    min-height: 35px;
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
@@ -221,3 +221,7 @@ h3 {
     text-decoration: none;
     cursor: pointer;
   }
+
+  .pure-g p {
+    letter-spacing: 0em;
+}
